src/objects/NJ_Production_Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Production__c</fullName>
        <formula>Apr__c + Jan__c + Feb__c + Mar__c + May__c + Jun__c + Jul__c + Aug__c + Sep__c + Oct__c + Nov__c + Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Production</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr__c</fullName>
        <label>Apr</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <label>Aug</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <label>Feb</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <label>Jan</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <label>Jul</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <label>Jun</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <label>Mar</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <label>Nov</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <label>Oct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCF_Region__c</fullName>
        <label>SCF Region</label>
        <picklist>
            <picklistValues>
                <fullName>NEWARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTIC CITY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <label>Sep</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <label>Tilt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NJ Production Estimate</label>
    <nameField>
        <label>NJ Production Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NJ Production Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>